--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -157,7 +157,9 @@
       access and management of digital objects within digital repositories.
   </p>
   <p>
-      This specification is a normative specification which describes the nature of an OCFL Object (the "object-at-rest"). A set of recommendations for how OCFL Objects should be acted upon (the "object-in-motion") can be found in the [[OCFL-Implementation-Notes]].
+      This specification is a normative specification which describes the nature of an OCFL Object (the
+      "object-at-rest"). A set of recommendations for how OCFL Objects should be acted upon (the "object-in-motion")
+      can be found in the [[OCFL-Implementation-Notes]].
   </p>
     <section id="need">
         <h2>Need</h2>
