Fixed: Attempt to make the administrative info block less confusing
Fixes #204

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -281,9 +281,9 @@
         specification.
     </p>
     <p>
-        The administrative information is specific to OCFL Objects. Implementers of OCFL are strongly encouraged to
-        store their own metadata serializations as files in an OCFL Object, but, in the context of the OCFL
-        Specification these are considered to be part of the contents of an OCFL Object.
+        An OCFL Object also has administrative information that identifies a folder as an OCFL Object, and also
+        provides a means of tracking changes to the contents of the object over time. Administrative files, such as
+        the <a>Inventory</a> files, are not considered to be part of the content of the object.
     </p>
     <p>
         An OCFL Object is therefore:
