--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -966,7 +966,7 @@
     <section id="example-bagit-in-ocfl">
         <h2>BagIt in an OCFL Object</h2>
         <p>
-            [[!BagIt]] is a popular file packaging specification, but unlike OCFL it does not provide a mechanism for
+            [[BagIt]] is a common file packaging specification, but unlike OCFL it does not provide a mechanism for
             content versioning. Using OCFL it is possible to store a BagIt structure with content versioning, such
             that when the object state is resolved, it creates a valid BagIt 'bag'. This example will illustrate how
             this can be accomplished, using the <a href="https://tools.ietf.org/html/draft-kunze-bagit-17#section-4.1">
