Add spec link in intro, change OCFL-Spec to OCFL-Specification

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -100,7 +100,7 @@
                     href: "https://public.ccsds.org/pubs/650x0m2.pdf",
                     date: "June 2012"
                 },
-                "OCFL-Spec": {
+                "OCFL-Specification": {
                     title: "OCFL Specification",
                     href: "../spec"
                 },
@@ -128,8 +128,8 @@
   <section id="abstract" class="informative">
     <h2>Introduction</h2>
     <p>
-        This document provides guidance to OCFL implementers for how clients should behave when operating on
-        OCFL Objects.
+        This document provides guidance on implementation of the [[OCFL-Specification]] for how clients should behave
+        when operating on OCFL Objects.
     </p>
   </section>
 
@@ -143,9 +143,9 @@
     </p>
     <p>
       Additionally, as an aid to those who may need to recover OCFL objects in the future, it is recommended that a
-      copy of the [[OCFL-Spec]] is stored in the top level of the OCFL storage root. OCFL ignores files other than the
-      conformance declaration at the top level so it is a good location to store documentation that may be useful for
-      recovery.
+      copy of the [[OCFL-Specification]] is stored in the top level of the OCFL storage root. OCFL ignores files
+      other than the conformance declaration at the top level so it is a good location to store documentation that
+      may be useful for recovery.
     </p>
     <p>
       A more complete approach would be to create a specific OCFL object that contains this documentation and to have a
