Fixed in response to feedback

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -293,9 +293,8 @@
         specification.
     </p>
     <p>
-        An OCFL Object also has administrative information that identifies a folder as an OCFL Object, and also
-        provides a means of tracking changes to the contents of the object over time. Administrative files, such as
-        the <a>Inventory</a> files, are not considered to be part of the content of the object.
+        An OCFL Object includes administrative information that identifies a directory as an OCFL Object, and also
+        provides a means of tracking changes to the contents of the object over time.
     </p>
     <p>
         An OCFL Object is therefore:
