--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -14,16 +14,19 @@
             editors: [
                 {
                     name: "Andrew Hankinson",
+                    url: "https://orcid.org/0000-0003-2663-0003",
                     company: "Bodleian Libraries, University of Oxford",
                     companyURL: "http://www.bodleian.ox.ac.uk/"
                 },
                 {
                     name: "Neil Jefferies",
+                    url: "https://orcid.org/0000-0003-3311-3741",
                     company: "Bodleian Libraries, University of Oxford",
                     companyURL: "http://www.bodleian.ox.ac.uk/"
                 },
                 {
                     name: "Rosalyn Metz",
+                    url: "https://orcid.org/0000-0003-3526-2230",
                     company: "Emory University",
                     companyURL: "https://web.library.emory.edu/"
                 },
@@ -40,6 +43,7 @@
                 },
                 {
                     name: "Andrew Woods",
+                    url: "https://orcid.org/0000-0002-8318-4225",
                     company: "DuraSpace",
                     companyURL: "http://duraspace.org/"
                 }
