Fixed: Add note about versions
Fixes #141

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -315,6 +315,12 @@
         include all the descriptive, administrative, structural, representation and preservation metadata relevant
         to the object.
     </p>
+    <p>
+        A central feature of the OCFL specification is support for versioning. This recognizes that digital objects will
+        change over time, through new requirements, fixes, updates, or format shifts. The specification takes no
+        position on what constitutes a version or a versionable action, but it is recommended that implementers have a
+        clear position on this within their local storage policies.
+    </p>
 
     <section id="object-structure">
         <h2>Object Structure</h2>
