Update storage root extension language

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -798,9 +798,9 @@
     <section id="root-extensions">
         <h2>Extensions</h2>
         <p>
-            The behavior of the storage root may be extended to support features from other specifications.  An OCFL
-            validator MUST ignore any files in the storage root it does not understand, but these files MUST not appear
-            outside of the storage root.
+            The behavior of the storage root may be extended to support features from other specifications.  
+            An OCFL validator MUST ignore any files in the storage root it does not understand. Additional 
+	    files MUST NOT appear in other directories under the storage root.
         </p>
         <blockquote class="informative">
             <p>
