Fixed: Attempt to make the administrative info block less confusing (#207)
* Fixed: Attempt to make the administrative info block less confusing

Fixes #204

* Fixed in response to feedback

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -297,9 +297,8 @@
         specification.
     </p>
     <p>
-        The administrative information is specific to OCFL Objects. Implementers of OCFL are strongly encouraged to
-        store their own metadata serializations as files in an OCFL Object, but, in the context of the OCFL
-        Specification these are considered to be part of the contents of an OCFL Object.
+        An OCFL Object includes administrative information that identifies a directory as an OCFL Object, and also
+        provides a means of tracking changes to the contents of the object over time.
     </p>
     <p>
         An OCFL Object is therefore:
