Minor wording simplification

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -599,8 +599,8 @@
                         </p>
                         <blockquote class="informative">
                             <p>
-                                Non-normative note: The <a>logical state</a> of the object uses content-addressable
-                                techniques to map logical file paths to their bitstreams, as expressed in the manifest
+                                Non-normative note: The <a>logical state</a> of the object uses content-addressing
+                                to map logical file paths to their bitstreams, as expressed in the manifest
                                 section of the inventory.
                             </p>
                             <p>
