Clarify non-ordered nature of version items in inventory
Resolves: https://github.com/OCFL/spec/issues/218

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -539,7 +539,8 @@
             <h2>Versions</h2>
             <p>
                 An OCFL Object Inventory MUST include a block for storing versions. This block MUST have the
-                key of <code>versions</code> within the inventory, and it MUST be an array.
+                key of <code>versions</code> within the inventory, and it MUST be an array. There is no requirement
+                that the ordering of versions in this array represent a chronological or order of any kind.
             </p>
             <p>
                 The <code>versions</code> array MUST be a list of one or more JSON objects, one for each
