Fix typo 'OLFL' to 'OCFL'

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1114,7 +1114,7 @@ myfirstbag
         <h2>Moab in an OCFL Object</h2>
         <p>
             [[Moab]] is an archive information package format developed and used by Stanford University.
-            Many of the ideas in Moab have been refined by OLFL, and OCFL is designed to
+            Many of the ideas in Moab have been refined by OCFL, and OCFL is designed to
             give institutions currently using Moab an easy path to adoption.
         </p>
         <p>
