--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -512,13 +512,13 @@
             <p>
                 The value of the <code>manifest</code> key is a JSON object, with keys corresponding to the digests
                 of every content file in all versions of the <a>OCFL Object</a>. The value for each key is an array
-                containing the <a>logical file path</a>s of files in the OCFL Object that have content with the
+                containing the <a>existing file path</a>s of files in the OCFL Object that have content with the
                 given digest.
             </p>
             <blockquote class="informative">
                 <p>
                     Non-normative note: If only one file is stored in the OCFL Object for each digest, fully
-                    de-duplicating the content, then there will be only one logical file path for each digest.
+                    de-duplicating the content, then there will be only one existing file path for each digest.
                     There may, however, be multiple logical file paths for a given digest if the content was
                     not entirely de-duplicated when constructing the OCFL Object.
                 </p>
