--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -341,8 +341,8 @@
         └── inventory.json.sha512
         </pre>
 
-        <section id="object-filesystem-restrictions">
-            <h2>Filesystem Restrictions</h2>
+        <section id="object-interoperability">
+            <h2>Interoperability</h2>
             <p>
                 Within an OCFL Object and its associated <a>Inventory</a>, the following restrictions are applied
                 to filesystem features. These restrictions are provided in an attempt to normalize file handling
@@ -350,7 +350,7 @@
             </p>
             <ul>
                 <li>
-                    <strong>Symbolic links</strong> (aka 'shortcuts' or 'aliases') MUST not be used within an
+                    <strong>Symbolic links</strong> (aka 'shortcuts' or 'aliases') MUST NOT be used within an
                     OCFL Object. These are not portable and may lead to undefined behaviours in client applications
                 </li>
                 <li><strong>File paths</strong> MUST use the "forward-slash" ('/') as a path separator. Some
