Reference Implementation Notes

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -351,7 +351,8 @@
             <p>
                 If use of these features are required to preserve an exact copy of the content (for example,
                 preserving a hard-drive image), implementers SHOULD consider using a packaging format,
-                such as ZIP or TAR files or ISO disk images, to preserve the content.
+                such as ZIP or TAR files or ISO disk images, to preserve the content. See the
+                [[OCFL-Implementation-Notes]] for further details.
             </p>
             <ul>
                 <li>
