Fixed: Specify that EFPs must be relative to OR.

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -515,6 +515,10 @@
                 containing the <a>logical file path</a>s of files in the OCFL Object that have content with the
                 given digest.
             </p>
+            <p>
+                <a data-lt="existing file path">Existing file paths</a> within a manifest block MUST be given relative
+                to the <a>OCFL Object Root</a>.
+            </p>
             <blockquote class="informative">
                 <p>
                     Non-normative note: If only one file is stored in the OCFL Object for each digest, fully
