Fixed: Additional EFP typos
Missed a few mentions of EFPs in the previous PR

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -519,11 +519,11 @@
                 <p>
                     Non-normative note: If only one file is stored in the OCFL Object for each digest, fully
                     de-duplicating the content, then there will be only one existing file path for each digest.
-                    There may, however, be multiple logical file paths for a given digest if the content was
+                    There may, however, be multiple existing file paths for a given digest if the content was
                     not entirely de-duplicated when constructing the OCFL Object.
                 </p>
                 <p>
-                    An example manifest object for three logical file paths, all in version 1, is shown below:
+                    An example manifest object for three existing file paths, all in version 1, is shown below:
                 </p>
 <pre>
   "manifest": {
