--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -514,7 +514,7 @@
                 of every content file in all versions of the <a>OCFL Object</a>. The value for each key is an array
                 containing the <a>existing file path</a>s of files in the OCFL Object that have content with the
                 given digest. <a data-lt="existing file path">Existing file paths</a> within a manifest block MUST be
-                given relative to the <a>OCFL Object Root</a>.
+                relative to the <a>OCFL Object Root</a>.
             </p>
             <blockquote class="informative">
                 <p>
