--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -512,14 +512,14 @@
             <p>
                 The value of the <code>manifest</code> key is a JSON object, with keys corresponding to the digests
                 of every content file in all versions of the <a>OCFL Object</a>. The value for each key is an array
-                containing the <a>existing file path</a>s of files in the OCFL Object that have content with the
-                given digest.
+                containing the <a data-lt="existing file path">existing file paths</a> of files in the OCFL Object that
+                have content with the given digest.
             </p>
             <blockquote class="informative">
                 <p>
                     Non-normative note: If only one file is stored in the OCFL Object for each digest, fully
-                    de-duplicating the content, then there will be only one existing file path for each digest.
-                    There may, however, be multiple existing file paths for a given digest if the content was
+                    de-duplicating the content, then there will be only one <a>existing file path</a> for each digest.
+                    There may, however, be multiple logical file paths for a given digest if the content was
                     not entirely de-duplicated when constructing the OCFL Object.
                 </p>
                 <p>
@@ -651,7 +651,7 @@
                 The structure of the <code>fixity</code> section MUST contain a key corresponding to an
                 <a href="#digest-algorithms">approved digest algorithm</a>. The value of this key MUST follow the
                 structure of the <a href="#manifest"><code>manifest</code></a> section; that is, a key corresponding
-                to the digest value, and an array of file paths that match that digest.
+                to the digest value, and an array of <a>existing file path</a>s that match that digest.
             </p>
             <blockquote class="informative">
                 <p>
