Add ordering note

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -467,7 +467,8 @@
         <h2>Inventory</h2>
         <p>
             An OCFL Object Inventory MUST follow the [[!JSON]] structure described in this section and MUST be named
-            <code>inventory.json</code>.
+            <code>inventory.json</code>. The order of entries in both the [[JSON]] objects and arrays used in inventory
+            files has no significance.
         </p>
         <blockquote class="informative">
             <p>
