--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -356,7 +356,7 @@
     <section id="version-directories">
         <h2>Version Directories</h2>
         <p>
-            OCFL Object content is stored as a sequence of one or more versions. Each object version is stored in a
+            OCFL Object content MUST be stored as a sequence of one or more versions. Each object version is stored in a
             version directory under the object root. The sequence of version numbers is the sequence of positive
             integers: 1, 2, 3, etc., and the version directory name is constructed by adding the prefix <code>v</code>.
         </p>
