Remove empty content directory

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -331,17 +331,15 @@
             The basic OCFL Object structure has a minimal set of files and directories necessary to support content
             storage and object validation. The minimum required is shown in the following figure:
         </p>
-        <pre>
+<pre>
 [object_root]
     ├── 0=ocfl_object_1.0
     ├── inventory.json
     ├── inventory.json.sha512
     └── v1
         ├── inventory.json
-        ├── inventory.json.sha512
-        └── content
-            └── .keep
-        </pre>
+        └── inventory.json.sha512
+</pre>
     </section>
 
     <section id="object-conformance-declaration">
