Fixed spelling of subdirectory

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -385,7 +385,7 @@
         </p>
         <p>
             Version directories MUST have a sub-directory called <code>content</code> if there are files present, and
-            SHOULD NOT contain a <code>content</code> subdirectory otherwise. There MUST be no other files or
+            SHOULD NOT contain a <code>content</code> sub-directory otherwise. There MUST be no other files or
             directories as children of a version directory, other than an <a href="#inventory">inventory file</a>,
             an <a href="#inventory-digest">inventory digest</a>, and a <code>content</code> directory.
         </p>
