--- a/0.1/spec/index.html
+++ b/0.1/spec/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Oxford Common File Layout Specification</title>
+    <title>Oxford Common File Layout Specification 0.1</title>
     <meta charset="utf-8">
-    <meta name="description" content="Oxford Common File Layout Specification">
-    <script src="../respec-w3c-common.js"
+    <meta name="description" content="Oxford Common File Layout Specification 0.1">
+    <script src="../respec-ocfl.js"
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
-            specStatus: "unofficial",
+            specStatus: "ocfl-cr",
             shortName: "ocfl-spec",
             includePermalinks: true,
             editors: [
@@ -56,7 +56,8 @@
                 key: "Previous version",
                 data: [
                     {
-                        value: "N/A"
+                        value: "N/A",
+                        href: "https://en.wikipedia.org/wiki/N/a"
                     }
                 ]
             }, {
