--- a/0.1/implementation-notes/index.html
+++ b/0.1/implementation-notes/index.html
@@ -179,7 +179,7 @@
       Consideration should also be given to calculations of storage usage when migrating between filesystems. Many 
       back-end filesystem features, which are essentially invisible to user-space code, can have a significant
       impact on the actual consumption of storage space compared with the a simple sum of file sizes. Compression,
-      extents and block suballocation are examples of such features which, while providing benefits in terms of
+      extents and block sub-allocation are examples of such features which, while providing benefits in terms of
       storage efficiency, do require care when considering issues of capacity planning or migration. 
     </p>
   </section>
