Fix typo in example 5.2
Resolves: https://github.com/OCFL/spec/issues/250

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -894,8 +894,8 @@
     │   ├── inventory.json
     │   ├── inventory.json.sha512
     │   └── content
-    │       ├── foo
-    │       └── bar.xml
+    │       └── foo
+    │           └── bar.xml
     └── v3
         ├── inventory.json
         ├── inventory.json.sha512
