Tweaks to state and logs terminology

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -238,14 +238,15 @@
             <dfn>Logical State</dfn>:
         </dt>
         <dd>
-            A grouping of logical file paths reflecting the state of the content for a given version.
+            A grouping of logical file paths with particular content reflecting the state of the object content for
+            a given version.
         </dd>
         <dt>
             <dfn>Logs Directory</dfn>:
         </dt>
         <dd>
-            A directory for storing information about the content (e.g., actions performed) that may not necessarily be
-            part of the content itself.
+            A directory for storing information about the content (e.g., actions performed) that is not part of the
+            content itself.
         </dd>
         <dt>
             <dfn>Manifest</dfn>
