--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -494,7 +494,8 @@
                 <dt><code>id</code></dt>
                 <dd>
                     A unique identifier for the OCFL Object. This MUST be unique in the local context, and SHOULD be
-                    either a URI or URN. There is no expectation that values given as URIs are resolveable as URLs.
+                    a URI [[!RFC3986]]. There is no expectation that a URI used is resolvable. For example, URNs
+                    [[RFC8141]] MAY be used.
                 </dd>
                 <dt><code>type</code></dt>
                 <dd>
@@ -508,7 +509,7 @@
                 </dd>
                 <dt><code>head</code></dt>
                 <dd>
-                    A value corresponding to the identifier of the most recent, or 'head,' version of the object.
+                    A value corresponding to the version directory name of the most recent version of the object.
                 </dd>
             </dl>
             <p>
