Revise based on review

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -238,8 +238,8 @@
             <dfn>Logical State</dfn>:
         </dt>
         <dd>
-            A grouping of logical file paths with particular content reflecting the state of the object content for
-            a given version.
+            A grouping of logical file paths tied to their corresponding bitstreams that reflect the state of the
+            object content for a given version.
         </dd>
         <dt>
             <dfn>Logs Directory</dfn>:
